--- a/de.mpc.pia.knime.dependencies/.classpath
+++ b/de.mpc.pia.knime.dependencies/.classpath
@@ -1,85 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="libs/pia/pia-1.3.16.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jaxb-api-2.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jaxb-core-2.3.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jaxb-impl-2.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jaxb-xjc-2.2.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/antlr-2.7.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/archive-data-provider-api-2.0.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/avalon-framework-4.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/BaseLib-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/bcmail-jdk14-138.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/bcprov-jdk14-138.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/biojava-ontology-4.2.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/braf-1.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/chardet-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-collections-3.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-collections4-4.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-compress-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-io-2.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-lang3-3.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-logging-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-math-2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-net-2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/cpdetector-1.0.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/CvtBaseLib-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/ehcache-3.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/fastutil-6.5.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/isorelax-20050913.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/itext-2.0.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jargs-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jchardet-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jcl-over-slf4j-1.7.19.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jcommon-1.0.16.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jfreechart-1.0.13.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jmzidentml-1.2.11.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jmzml-1.6.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jmztab-modular-converters-3.0.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jmztab-modular-model-3.0.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jmztab-modular-util-3.0.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jshortcut-0.4-oberzalek.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jsparklines-1.0.9.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jsuffixarrays-0.1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-1.2.17.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-api-2.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-core-2.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-slf4j-impl-2.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/logback-classic-1.1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/logback-core-1.1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/logkit-1.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/looks-2.2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/mascotdatfile-3.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/msv-20050913.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/ols-client-1.18.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/ols-dialog-3.4.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/owlapi-api-3.5.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/owlapi-oboformat-3.5.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/owlapi-parsers-3.5.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pdf-transcoder-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/PDLibrary-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/poi-3.9.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-jaxb-1.0.22.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-mod-2.1.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-utilities-2.0.18.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/px-submission-core-2.0.15.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/relaxngDatatype-20050913.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/servlet-api-2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/slf4j-api-1.7.14.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/slf4j-log4j12-1.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/sqlite4java-1.0.392.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/sqlite-jdbc-3.20.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/ssj-2.5.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/swagger-annotations-1.3.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/swing-layout-1.0.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/swingx-0.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/utilities-4.12.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/web-service-model-0.2.12.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xpp3-1.1.4c.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xsdlib-20050913.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xtandem-parser-1.13.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xxindex-0.23.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xz-1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pride/inspector-mzgraph-browser-2.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pride/inspector-swing-utils-2.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pride/istack-commons-runtime-2.16.jar"/>
@@ -101,7 +21,84 @@
 	<classpathentry exported="true" kind="lib" path="libs/jung/stax-api-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jung/vecmath-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jung/wstx-asl-3.2.6.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/aircompressor-0.19.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/archive-data-provider-api-2.0.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/BaseLib-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/biojava-ontology-5.4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/braf-1.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/chardet-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-math-2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-net-2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/cpdetector-1.0.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/CvtBaseLib-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/fastutil-6.5.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/isorelax-20050913.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jackson-annotations-2.4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jakarta.activation-api-1.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jakarta.xml.bind-api-2.3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/javax.activation-api-1.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jaxb-api-2.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jaxb-core-2.3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jaxb-impl-2.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jaxb-xjc-2.2.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jcl-over-slf4j-1.7.19.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jcommon-1.0.16.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jfreechart-1.0.13.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jmzidentml-1.2.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jmztab-modular-converters-3.0.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jmztab-modular-model-3.0.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jmztab-modular-util-3.0.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jshortcut-0.4-oberzalek.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jsparklines-1.0.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jsuffixarrays-0.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/kryo-5.0.0-RC9.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-1.2-api-2.14.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-api-2.14.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-core-2.14.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-jcl-2.14.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-slf4j-impl-2.14.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/logback-classic-1.1.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/logback-core-1.1.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/looks-2.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/mascotdatfile-3.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/minlog-1.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/msv-20050913.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/objenesis-3.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/ols-client-1.18.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/ols-dialog-3.4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/owlapi-api-3.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/owlapi-oboformat-3.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/owlapi-parsers-3.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pdf-transcoder-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/PDLibrary-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/picocli-4.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/poi-4.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-jaxb-1.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-mod-2.1.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-utilities-2.0.18.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/px-submission-core-2.0.15.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/reflectasm-1.11.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/relaxngDatatype-20050913.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/servlet-api-2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/slf4j-api-1.7.25.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/sqlite4java-1.0.392.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/sqlite-jdbc-3.20.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/ssj-2.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/swagger-annotations-1.3.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/swing-layout-1.0.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/swingx-0.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/utilities-5.0.24.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/web-service-model-0.2.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xpp3-1.1.3.4-RC3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xsdlib-20050913.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xtandem-parser-1.13.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xxindex-0.23.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/pia-1.4.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
