--- a/de.mpc.pia.knime.dependencies/.classpath
+++ b/de.mpc.pia.knime.dependencies/.classpath
@@ -21,14 +21,12 @@
 	<classpathentry exported="true" kind="lib" path="libs/jung/stax-api-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jung/vecmath-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jung/wstx-asl-3.2.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/aircompressor-0.19.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/aircompressor-0.21.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/archive-data-provider-api-2.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/BaseLib-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/biojava-ontology-6.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/braf-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/chardet-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-math-2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-net-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/cpdetector-1.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/CvtBaseLib-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/fastutil-6.5.1.jar"/>
@@ -51,19 +49,19 @@
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jshortcut-0.4-oberzalek.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jsparklines-1.0.12.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jsuffixarrays-0.1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/kryo-5.0.0-RC9.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/kryo-5.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-1.2-api-2.17.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-api-2.17.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-core-2.17.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-jcl-2.17.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-slf4j-impl-2.17.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/logback-classic-1.1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/logback-core-1.1.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/logback-classic-1.2.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/logback-core-1.2.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/looks-2.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/mascotdatfile-3.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/minlog-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/msv-20050913.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/objenesis-3.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/objenesis-3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/ols-client-1.18.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/ols-dialog-3.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/owlapi-api-3.5.0.jar"/>
@@ -93,7 +91,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xsdlib-20050913.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xtandem-parser-1.13.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xxindex-0.23.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/pia-1.4.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/pia-1.4.7.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
