--- a/de.mpc.pia.knime.dependencies/.classpath
+++ b/de.mpc.pia.knime.dependencies/.classpath
@@ -1,41 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="libs/pride/inspector-mzgraph-browser-2.0.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pride/inspector-swing-utils-2.0.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pride/istack-commons-runtime-2.16.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pride/ms-data-core-api-2.0.30.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/collections-generic-4.01.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/colt-1.2.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/concurrent-1.3.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/j3d-core-1.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/jung-3d-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/jung-3d-demos-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/jung-algorithms-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/jung-api-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/jung-graph-impl-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/jung-io-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/jung-jai-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/jung-jai-samples-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/jung-samples-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/jung-visualization-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/stax-api-1.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/vecmath-1.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/wstx-asl-3.2.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/aircompressor-0.19.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/aircompressor-0.21.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/archive-data-provider-api-2.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/BaseLib-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/biojava-ontology-5.4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/biojava-ontology-6.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/braf-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/chardet-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-math-2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-net-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/cpdetector-1.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/CvtBaseLib-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/fastutil-6.5.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/isorelax-20050913.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jackson-annotations-2.4.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jakarta.activation-api-1.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jakarta.xml.bind-api-2.3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jakarta.activation-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jakarta.xml.bind-api-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/javax.activation-api-1.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jaxb-api-2.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jaxb-core-2.3.0.jar"/>
@@ -51,19 +28,19 @@
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jshortcut-0.4-oberzalek.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jsparklines-1.0.12.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jsuffixarrays-0.1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/kryo-5.0.0-RC9.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/kryo-5.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-1.2-api-2.17.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-api-2.17.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-core-2.17.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-jcl-2.17.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/log4j-slf4j-impl-2.17.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/logback-classic-1.1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/logback-core-1.1.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/logback-classic-1.2.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/logback-core-1.2.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/looks-2.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/mascotdatfile-3.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/minlog-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/msv-20050913.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/objenesis-3.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/objenesis-3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/ols-client-1.18.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/ols-dialog-3.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/owlapi-api-3.5.0.jar"/>
@@ -71,34 +48,39 @@
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/owlapi-parsers-3.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pdf-transcoder-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/PDLibrary-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/picocli-4.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/poi-4.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/picocli-4.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/poi-5.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-jaxb-1.0.22.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-mod-2.1.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-utilities-2.0.18.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/px-submission-core-2.0.15.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/reflectasm-1.11.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/relaxngDatatype-20050913.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/servlet-api-2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/slf4j-api-1.7.25.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/sqlite-jdbc-3.20.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/servlet-api-2.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/SparseBitSet-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/sqlite4java-1.0.392.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/sqlite-jdbc-3.20.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/ssj-2.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/swagger-annotations-1.3.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/swing-layout-1.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/swingx-0.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/utilities-5.0.24.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/utilities-5.0.41.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/web-service-model-0.2.12.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xpp3-1.1.4c.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xsdlib-20050913.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xtandem-parser-1.13.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xxindex-0.23.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/pia-1.4.5.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="libs/jung/collections-generic-4.01.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jung/colt-1.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jung/concurrent-1.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jung/jung-algorithms-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jung/jung-api-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jung/jung-graph-impl-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jung/jung-visualization-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pride/inspector-mzgraph-browser-2.0.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pride/inspector-swing-utils-2.0.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pride/istack-commons-runtime-2.16.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pride/ms-data-core-api-2.0.30.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/pia-1.4.7.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
