--- a/de.mpc.pia.knime.nodes.testing/build.properties
+++ b/de.mpc.pia.knime.nodes.testing/build.properties
@@ -1,5 +1,4 @@
 bin.includes = META-INF/,\
-               fragment.xml,\
-               pia-knime-tests.jar
-source.pia-knime-tests.jar = 
-jars.compile.order = pia-knime-tests.jar
+               .
+jars.compile.order = .
+source.. = src/
